# pomeranian

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  index.html  params.json  wscript
data/: Makefile.am  Makefile.in  c_to_flat.pl  flat.c  flat.xcf  pomeranian.desktop.in  pomeranian.glade  pomeranian.txt  wscript
data/ani/: Makefile.am  Makefile.in  wscript
data/sounds/: Makefile.am  Makefile.in  wscript
data/ui/: Makefile.am  Makefile.in  pomeranian.ui  wscript
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  pomeranian.cron.d.ex  pomeranian.default.ex  pomeranian.doc-base.EX  pomeranian.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
dll/: Makefile.am  Makefile.in
installer/: Makefile.am  Makefile.in  pomeranian.nsi.in
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  pomeranian.pot
src/: Makefile.am  Makefile.in  config.vapi  input_rectangles.vala  pomeranian.vala  wscript
stylesheets/: styles.css
