## Process this file with automake to produce Makefile.in

dll_DATA = \
	zlib1.dll\
	libgio-2.0-0.dll\
	libfontconfig-1.dll\
	libffi-5.dll\
	libpixman-1-0.dll\
	libjpeg-8.dll\
	libgtk-3-0.dll\
	libgobject-2.0-0.dll\
	libtiff-5.dll\
	libpng15-15.dll\
	libgstreamer-0.10-0.dll\
	libintl-8.dll\
	libpangowin32-1.0-0.dll\
	libpangoft2-1.0-0.dll\
	libglib-2.0-0.dll\
	liblzma-5.dll\
	libgdk_pixbuf-2.0-0.dll\
	libgee-0.8-2.dll\
	libfreetype-6.dll\
	libgthread-2.0-0.dll\
	libpangocairo-1.0-0.dll\
	libatk-1.0-0.dll\
	libcairo-2.dll\
	libxml2-2.dll\
	libgdk-3-0.dll\
	libjasper-1.dll\
	libgmodule-2.0-0.dll\
	libcairo-gobject-2.dll\
	libpango-1.0-0.dll\
	libgstrtp-0.10-0.dll\
	libgstrtsp-0.10-0.dll\
	libgstsignalprocessor-0.10-0.dll\
	libgstnetbuffer-0.10-0.dll\
	libgstpbutils-0.10-0.dll\
	libgstnet-0.10-0.dll\
	libgstapp-0.10-0.dll\
	libgstcontroller-0.10-0.dll\
	libgstbase-0.10-0.dll\
	libgstphotography-0.10-0.dll\
	libgstaudio-0.10-0.dll\
	libgsttag-0.10-0.dll\
	libgstvideo-0.10-0.dll\
	libgstcdda-0.10-0.dll\
	libgstsdp-0.10-0.dll\
	libgstdataprotocol-0.10-0.dll\
	libgstfft-0.10-0.dll\
	libgstbasevideo-0.10-0.dll\
	libgstinterfaces-0.10-0.dll\
	libgstriff-0.10-0.dll\
	libgconf-2-4.dll\
	libogg-0.dll\
	libsoup-2.4-1.dll\
	libtheoradec-1.dll\
	libtheoraenc-1.dll\
	libvorbis-0.dll\
	libvorbisenc-2.dll\
	libFLAC-8.dll\
	libgnomevfs-2-0.dll\
	libdbus-1-3.dll\
	libdbus-glib-1-2.dll
	
	
	

gstreamer_dll_DATA = \
	libgstsiren.dll\
	libgstvideotestsrc.dll\
	libgstdtmf.dll\
	libgstfestival.dll\
	libgstsouphttpsrc.dll\
	libgstcdxaparse.dll\
	libgstvideomixer.dll\
	libgstmpeg4videoparse.dll\
	libgststereo.dll\
	libgstsubparse.dll\
	libgstcutter.dll\
	libgstaudioparsersbad.dll\
	libgstreplaygain.dll\
	libgstauparse.dll\
	libgstavi.dll\
	libgstdebugutilsbad.dll\
	libgstdeinterlace.dll\
	libgstrawparse.dll\
	libgstsubenc.dll\
	libgsttta.dll\
	libgstffmpegcolorspace.dll\
	libgstnavigationtest.dll\
	libgstwavenc.dll\
	libgstmpegtsmux.dll\
	libgstcoreelements.dll\
	libgstvideofilter.dll\
	libgstalphacolor.dll\
	libgstvideocrop.dll\
	libgstudp.dll\
	libgstvorbis.dll\
	libgstfreeze.dll\
	libgstaudioresample.dll\
	libgstgdp.dll\
	libgstgsettingselements.dll\
	libgstrtpmux.dll\
	libgstvideosignal.dll\
	libgstequalizer.dll\
	libgstaiff.dll\
	libgstrtp.dll\
	libgstapp.dll\
	libgstdvbsuboverlay.dll\
	libgstpcapparse.dll\
	libgstnuvdemux.dll\
	libgstalpha.dll\
	libgstnsf.dll\
	libgstadpcmdec.dll\
	libgstadder.dll\
	libgstfrei0r.dll\
	libgstbayer.dll\
	libgstaudiotestsrc.dll\
	libgstvideomaxrate.dll\
	libgstgio.dll\
	libgstspectrum.dll\
	libgstpnm.dll\
	libgstliveadder.dll\
	libgstinvtelecine.dll\
	libgstmpegpsmux.dll\
	libgsthdvparse.dll\
	libgstdirectdrawsink.dll\
	libgsth264parse.dll\
	libgstjp2kdecimator.dll\
	libgstdirectsoundsrc.dll\
	libgstsdpelem.dll\
	libgstrtpmanager.dll\
	libgstpango.dll\
	libgstdirectsoundsink.dll\
	libgstdataurisrc.dll\
	libgsty4menc.dll\
	libgstvideoscale.dll\
	libgstrtsp.dll\
	libgstid3tag.dll\
	libgstasfmux.dll\
	libgstgoom.dll\
	libgstmve.dll\
	libgstgeometrictransform.dll\
	libgstmxf.dll\
	libgstspeed.dll\
	libgstvmnc.dll\
	libgstshapewipe.dll\
	libgstdecodebin.dll\
	libgstinterleave.dll\
	libgsttheora.dll\
	libgstqtmux.dll\
	libgstflac.dll\
	libgstjpegformat.dll\
	libgstmatroska.dll\
	libgstogg.dll\
	libgstautodetect.dll\
	libgstmultifile.dll\
	libgstaudioconvert.dll\
	libgstreal.dll\
	libgstaudiofx.dll\
	libgstinterlace.dll\
	libgstqtdemux.dll\
	libgstcoloreffects.dll\
	libgstgconfelements.dll\
	libgstmpegaudioparse.dll\
	libgstdebug.dll\
	libgstalaw.dll\
	libgstmpegvideoparse.dll\
	libgstcoreindexers.dll\
	libgstflv.dll\
	libgstmulaw.dll\
	libgstsmpte.dll\
	libgstapetag.dll\
	libgstautoconvert.dll\
	libgstadpcmenc.dll\
	libgstimagefreeze.dll\
	libgstvideobox.dll\
	libgstplaybin.dll\
	libgstivfparse.dll\
	libgstdecodebin2.dll\
	libgstdvdspu.dll\
	libgstvideomeasure.dll\
	libgstsegmentclip.dll\
	libgstcamerabin.dll\
	libgstmpegdemux.dll\
	libgstid3demux.dll\
	libgstcolorspace.dll\
	libgstscaletempoplugin.dll\
	libgstvideorate.dll\
	libgstwavparse.dll\
	libgsteffectv.dll\
	libgstflxdec.dll\
	libgstgaudieffects.dll\
	libgsticydemux.dll\
	libgstgoom2k1.dll\
	libgstmultipart.dll\
	libgstlevel.dll\
	libgsty4mdec.dll\
	libgstvolume.dll\
	libgstgnomevfs.dll\
	libgsttypefindfunctions.dll\
	libgstaudiorate.dll\
	libgstencodebin.dll\
	libgstmve.dll\
	libgstgeometrictransform.dll\
	libgstmxf.dll\
	libgstspeed.dll\
	libgstvmnc.dll\
	libgstshapewipe.dll\
	libgstdecodebin.dll\
	libgstinterleave.dll\
	libgsttheora.dll\
	libgstqtmux.dll\
	libgstflac.dll\
	libgstjpegformat.dll\
	libgstmatroska.dll\
	libgstogg.dll\
	libgstautodetect.dll\
	libgstmultifile.dll\
	libgstaudioconvert.dll\
	libgstreal.dll\
	libgstaudiofx.dll\
	libgstinterlace.dll\
	libgstqtdemux.dll\
	libgstcoloreffects.dll\
	libgstgconfelements.dll\
	libgstmpegaudioparse.dll\
	libgstdebug.dll\
	libgstalaw.dll\
	libgstmpegvideoparse.dll\
	libgstcoreindexers.dll\
	libgstflv.dll\
	libgstmulaw.dll\
	libgstsmpte.dll\
	libgstapetag.dll\
	libgstautoconvert.dll\
	libgstadpcmenc.dll\
	libgstimagefreeze.dll\
	libgstvideobox.dll\
	libgstplaybin.dll\
	libgstivfparse.dll\
	libgstdecodebin2.dll\
	libgstdvdspu.dll\
	libgstvideomeasure.dll\
	libgstsegmentclip.dll\
	libgstcamerabin.dll\
	libgstmpegdemux.dll\
	libgstid3demux.dll\
	libgstcolorspace.dll\
	libgstscaletempoplugin.dll\
	libgstvideorate.dll\
	libgstwavparse.dll\
	libgsteffectv.dll\
	libgstflxdec.dll\
	libgstgaudieffects.dll\
	libgsticydemux.dll\
	libgstgoom2k1.dll\
	libgstmultipart.dll\
	libgstlevel.dll\
	libgsty4mdec.dll\
	libgstvolume.dll\
	libgstgnomevfs.dll\
	libgsttypefindfunctions.dll\
	libgstaudiorate.dll\
	libgstencodebin.dll

dlldir = $(bindir)
gstreamer_dlldir = $(libdir)/gstreamer-0.10

EXTRA_DIST = $(dll_DATA) $(gstreamer_dll_DATA)

clean-local:
	-rm -r *.dll
$(dll_DATA) : %.dll : ${bindir}/%.dll
	cp $< $@
$(gstreamer_dll_DATA) : %.dll : ${libdir}/gstreamer-0.10/%.dll
	cp $< $@
	

	
